Fix find/replace never stopping in some cases

In case capture lists in the pattern regexp are specfied, the
progressbar will never vanish again.

BUG: 296205
REVIEW: 107552